# teamdev_fm_player_ui

./: .gitignore  README.md  biome.json  mainrs.txt  package.json  rust-to-js.md  tsconfig.json
src/: color.js  color.mjs  index.html  log.txt  main.js  main.mjs  musical_scale.mjs  play_state.js  play_state.mjs  player.html  player.js  player.mjs  player_current.mjs  queue.js  sequencer_msg_parser.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: char_code_lut.rs  cli.rs  comhikaku.rs  commands.rs  lib.rs  mahikaku.rs  main.rs  send_msg.rs  sequence_msg.rs  serial.rs  serial_com.rs  utils.rs  ymodem_origin.rs
src/assets/: miqs.avif
src/js/: backendProcess.mjs  backendProcess.mjs.map  color.mjs  color.mjs.map  console.mjs  console.mjs.map  dialog.mjs  dialog.mjs.map  note.mjs  note.mjs.map  performMonitor.mjs  performMonitor.mjs.map  periodic.mjs  periodic.mjs.map  pianoroll.mjs  pianoroll.mjs.map  play_state.mjs  player.mjs  seqMsgParser.mjs  seqMsgParser.mjs.map  sequencer_msg_parser.mjs
src/ts/: backendProcess.mts  color.mts  console.mts  dialog.mts  note.mts  performMonitor.mts  periodic.mts  pianoroll.mts  seqMsgParser.mts  sequenserInfo.d.ts  tauri.d.ts
