[package]
name = "miqs_music_prot"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "playback_information"
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = [ "dialog-message", "dialog-open"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

# イベント表示内容更新用
# crossterm = "0.27.0"
#テスト用モジュール
tokio = { version = "1.39.3", default-features = false,features = ["io-util", "sync", "macros"] }
ymodem-send-rs = { git = "https://github.com/pearlab2024-teamdev/ymodem-send-rs"}# ymodemリブ
clap = { version = "4.5.16", features = ["derive"] }
serial2-tokio = "0.1.13"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
